Update index.html with interactive game interface

--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trivial Pursuit</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Welcome to Trivial Pursuit!</h1>
-        <div id="question-container">
-            <div id="question"></div>
-            <div id="answers"></div>
-        </div>
-        <button id="next-button">Next Question</button>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html>
+<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>Duolingo Inspired Game</title>\n    <link rel="stylesheet" href="styles.css">\n</head>\n<body>\n    <div id="homeScreen">\n        <h1>Welcome to the Game!</h1>\n        <button id="startBtn">Start Game</button>\n        <button id="settingsBtn">Settings</button>\n    </div>\n    <div id="playerSetup" style="display:none;">\n        <h2>Player Setup</h2>\n        <input type="text" id="playerName" placeholder="Enter your name">\n        <button id="themeSelectBtn">Select Theme</button>\n    </div>\n    <div id="themeSelection" style="display:none;">\n        <h2>Choose a Theme</h2>\n        <button class="themeBtn" data-theme="light">Light</button>\n        <button class="themeBtn" data-theme="dark">Dark</button>\n        <button id="startGameBtn">Start Game</button>\n    </div>\n    <div id="gameScreen" style="display:none;">\n        <h2 id="gameTitle">Game Title</h2>\n        <button id="pauseBtn">Pause</button>\n        <div id="gameContent">\n            <!-- Game content goes here -->\n        </div>\n    </div>\n    <div id="resultsScreen" style="display:none;">\n        <h2>Your Results</h2>\n        <p id="score">Score: 0</p>\n        <button id="restartBtn">Restart Game</button>\n    </div>\n    <div id="pauseMenu" style="display:none;">\n        <h2>Paused</h2>\n        <button id="resumeBtn">Resume</button>\n        <button id="endGameBtn">End Game</button>\n    </div>\n    <script src="script.js"></script>\n</body>\n</html>
